@@ -382,6 +382,11 @@ public class TagOptionSingleton
     private boolean preserveFileIdentity = true;
 
     private Charset overrideCharset = null;
+
+    private boolean isOverrideCharsetForInfo = false;
+
+    private boolean isOverrideCharsetForId3 = false;
+
     /**
      * 
      */
@@ -960,6 +965,8 @@ public class TagOptionSingleton
         checkIsWritable = false;
         preserveFileIdentity = true;
         overrideCharset = null;
+        isOverrideCharsetForInfo = false;
+        isOverrideCharsetForId3 = false;
 
         //default all lyrics3 fields to save. id3v1 fields are individual
         // settings. id3v2 fields are always looked at to save.
@@ -1431,5 +1438,25 @@ public class TagOptionSingleton
     public void setOverrideCharset(Charset overrideCharset)
     {
         this.overrideCharset = overrideCharset;
+    }
+
+    public boolean isOverrideCharsetForInfo()
+    {
+        return isOverrideCharsetForInfo;
+    }
+
+    public void setOverrideCharsetForInfo(boolean isOverrideCharsetForInfo)
+    {
+        this.isOverrideCharsetForInfo = isOverrideCharsetForInfo;
+    }
+
+    public boolean isOverrideCharsetForId3()
+    {
+        return isOverrideCharsetForId3;
+    }
+
+    public void setOverrideCharsetForId3(boolean isOverrideCharsetForId3)
+    {
+        this.isOverrideCharsetForId3 = isOverrideCharsetForId3;
     }
 }
